// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The step component shall render the diet preference selection 1`] = `
<div>
  <div
    class="mt-8"
  >
    <div
      class="fixed top-36 mt-32 pl-2 left-1/2 transform -translate-x-1/2 px-4 py-6 bg-white shadow-md rounded-xl sm:max-w-md mx-auto"
      style="width: 98%;"
    >
      <h2
        class="text-xl font-medium text-gray-800 mb-4 sm:text-2xl"
      >
        Dietary Preferences
      </h2>
      <div
        class="flex items-center mb-4"
      >
        <span
          aria-checked="false"
          aria-disabled="true"
          aria-label="No Dietary Preference"
          class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
          data-disabled=""
          data-headlessui-state="disabled"
          id="headlessui-checkbox-:r7:"
          role="checkbox"
        />
        <span
          class="ml-3 text-gray-700"
        >
          No Preference
        </span>
      </div>
      <hr
        class="mb-4"
      />
      <div
        class="flex flex-wrap gap-3"
      >
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Vegetarian"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:r8:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Vegetarian
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Vegan"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:r9:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Vegan
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Gluten-Free"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:ra:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Gluten-Free
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Dairy-Free"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:rb:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Dairy-Free
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Keto"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:rc:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Keto
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Halal"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:rd:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Halal
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            aria-checked="false"
            aria-disabled="true"
            aria-label="Kosher"
            class="h-5 w-5 rounded border border-gray-300 flex items-center justify-center bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500"
            data-disabled=""
            data-headlessui-state="disabled"
            id="headlessui-checkbox-:re:"
            role="checkbox"
          />
          <span
            class="ml-3 text-gray-700"
          >
            Kosher
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The step component shall render the ingredient selection form 1`] = `
<div>
  <div
    class="mt-8"
  >
    <div
      class="fixed top-36 mt-32 pl-2 left-1/2 transform -translate-x-1/2 px-4 py-6 bg-white shadow-md rounded-xl sm:max-w-md mx-auto"
      style="width: 98%;"
    >
      <div
        class="flex justify-end w-full"
      >
        <button
          class="inline-flex items-center px-4 py-2 bg-green-600 text-white text-sm font-medium rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 transition duration-150 ease-in-out"
          data-headlessui-state=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="block mr-2 h-6 w-6"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 9a.75.75 0 0 0-1.5 0v2.25H9a.75.75 0 0 0 0 1.5h2.25V15a.75.75 0 0 0 1.5 0v-2.25H15a.75.75 0 0 0 0-1.5h-2.25V9Z"
              fill-rule="evenodd"
            />
          </svg>
          Add New Ingredient
        </button>
      </div>
      <div
        class="mt-4 w-full"
      >
        <div
          class="relative w-full"
        >
          <div
            class="relative w-full"
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              class="w-full rounded-lg border border-gray-300 bg-white py-3 pr-10 pl-4 text-base text-gray-700 shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
              data-disabled=""
              data-headlessui-state="disabled"
              disabled=""
              id="headlessui-combobox-input-:r2:"
              placeholder="Select an existing ingredient"
              role="combobox"
              type="text"
              value=""
            />
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="absolute inset-y-0 right-0 flex items-center pr-3"
              data-disabled=""
              data-headlessui-state="disabled"
              disabled=""
              id="headlessui-combobox-button-:r3:"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="w-5 h-5 text-gray-400"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-6 w-full"
      >
        <h2
          class="text-lg font-semibold text-indigo-600 mb-3"
        >
          Selected Ingredients:
        </h2>
        <div
          class="flex flex-wrap max-h-32 overflow-y-auto"
        >
          <div
            class="flex items-center bg-indigo-500 text-white text-sm font-medium px-3 py-1.5 rounded-full m-1"
          >
            <span>
              undefined
            </span>
            <button
              class="ml-2 focus:outline-none"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 text-white hover:text-gray-200"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center bg-indigo-500 text-white text-sm font-medium px-3 py-1.5 rounded-full m-1"
          >
            <span>
              undefined
            </span>
            <button
              class="ml-2 focus:outline-none"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 text-white hover:text-gray-200"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The step component shall render the review and submit recipes component 1`] = `
<div>
  <div
    class="mt-8"
  >
    <div
      class="flex flex-col mt-10"
    >
      <div
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
      >
        <div
          class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden relative mt-10 mb-5 overflow-x-hidden"
        >
          <div
            class="px-6 py-4 relative"
          >
            <div
              class="flex justify-between items-stretch w-full"
            >
              <div
                class="font-bold text-lg sm:text-xl lg:text-2xl mb-4 
            w-full
            
        "
                title="Recipe_1_name"
              >
                Recipe_1_name
              </div>
            </div>
            <h3
              class="text-gray-700 font-semibold text-lg"
            >
              Ingredients:
            </h3>
            <ul
              class="mb-4 flex flex-wrap gap-2"
            >
              <li>
                <span
                  class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_1_Ingredient_1 (Recipe_1_Ingredient_1_quantity_1)
                </span>
              </li>
              <li>
                <span
                  class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_1_Ingredient_2 (Recipe_1_Ingredient_2_quantity_2)
                </span>
              </li>
            </ul>
            <h3
              class="text-gray-700 font-semibold text-lg"
            >
              Dietary Preference:
            </h3>
            <div
              class="mb-5 mt-2 flex flex-wrap gap-2"
            >
              <span
                class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
              >
                Recipe_1_preference_1
              </span>
              <span
                class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
              >
                Recipe_1_preference_2
              </span>
            </div>
            <button
              aria-expanded="false"
              class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
              data-headlessui-state=""
              id="headlessui-disclosure-button-:rp:"
              type="button"
            >
              <span>
                Instructions
              </span>
              <svg
                aria-hidden="true"
                class="w-5 h-5 transform transition-transform duration-300 "
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <div
              class="mt-4"
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:rr:"
                type="button"
              >
                <span>
                  Additional Information
                </span>
                <svg
                  aria-hidden="true"
                  class="w-5 h-5 transform transition-transform duration-300 "
                  data-slot="icon"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-8 w-full flex justify-center"
      >
        <button
          aria-label="Submit selected recipes"
          class="flex items-center bg-blue-600 text-white px-6 py-3 rounded-full hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300 ease-in-out"
          data-headlessui-state=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5 mr-2"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19.916 4.626a.75.75 0 0 1 .208 1.04l-9 13.5a.75.75 0 0 1-1.154.114l-6-6a.75.75 0 0 1 1.06-1.06l5.353 5.353 8.493-12.74a.75.75 0 0 1 1.04-.207Z"
              fill-rule="evenodd"
            />
          </svg>
          Submit Selected (1) Recipes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The step component shall render the review inputs section 1`] = `
<div>
  <div
    class="mt-8"
  >
    <div
      class="fixed top-36 mt-32 pl-2 left-1/2 transform -translate-x-1/2 px-4 py-6 bg-white shadow-md rounded-xl sm:max-w-xl mx-auto"
      style="width: 98%;"
    >
      <div
        class="px-1 py-1"
      >
        <div
          class="text-center mb-6"
        >
          <h2
            class="text-2xl font-medium text-gray-800 sm:text-3xl"
          >
            Review Your Selections
          </h2>
          <p
            class="text-sm text-red-500 mt-2"
          >
            Please select at least 3 ingredients to proceed with recipe creation.
          </p>
        </div>
        <div
          class="mb-6"
        >
          <h3
            class="text-gray-700 font-semibold text-lg mb-2"
          >
            2 Ingredients:
          </h3>
          <ul
            class="flex flex-wrap gap-2 w-full sm:max-h-none sm:overflow-y-visible overflow-y-auto"
            style="max-height: 60px;"
          >
            <li
              class="flex items-center bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full"
            />
            <li
              class="flex items-center bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full"
            />
          </ul>
        </div>
        <div
          class="mb-6"
        >
          <h3
            class="text-gray-700 font-semibold text-lg mb-2"
          >
            2 Dietary Preferences:
          </h3>
          <div
            class="flex flex-wrap gap-2 overflow-y-auto"
            style="max-height: 70px;"
          >
            <span
              class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              preference-1
            </span>
            <span
              class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              preference-2
            </span>
          </div>
        </div>
        <div
          class="flex justify-between mt-8"
        >
          <button
            aria-label="Edit your selections"
            class="flex items-center justify-center bg-gray-200 text-gray-700 
                px-2 py-2 sm:px-4 sm:py-2 
                rounded-full transition duration-300 ease-in-out 
                hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 
                cursor-not-allowed opacity-50"
            data-disabled=""
            data-headlessui-state="disabled"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-4 h-4 mr-1 sm:w-5 sm:h-5 sm:mr-2"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z"
              />
            </svg>
            <span
              class="text-sm sm:text-base"
            >
              Edit
            </span>
          </button>
          <button
            aria-label="Create recipes based on your selections"
            class="flex items-center justify-center bg-green-600 text-white 
                px-2 py-2 sm:px-4 sm:py-2 
                rounded-full transition duration-300 ease-in-out 
                hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 
                cursor-not-allowed opacity-50"
            data-disabled=""
            data-headlessui-state="disabled"
            disabled=""
            type="button"
          >
            <span
              class="text-sm sm:text-base"
            >
              Create Recipes
            </span>
            <svg
              aria-hidden="true"
              class="w-4 h-4 ml-1 sm:w-5 sm:h-5 sm:ml-2"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.28 11.47a.75.75 0 0 1 0 1.06l-7.5 7.5a.75.75 0 0 1-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 0 1 1.06-1.06l7.5 7.5Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The step component shall render the select recipes component 1`] = `
<div>
  <div
    class="mt-8"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-center text-gray-500 text-sm mb-4"
      >
        Use the switch on each recipe to select or unselect.
      </p>
      <div
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
      >
        <div>
          <div
            class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden relative mt-10 mb-5 overflow-x-hidden"
          >
            <div
              class="px-6 py-4 relative"
            >
              <div
                class="flex justify-between items-stretch w-full"
              >
                <div
                  class="font-bold text-lg sm:text-xl lg:text-2xl mb-4 
            truncate max-w-[65%] sm:max-w-[75%] lg:max-w-[85%]
            cursor-pointer
        "
                  title=""
                >
                  Recipe_1_name
                </div>
                <button
                  aria-checked="true"
                  class="
                relative inline-flex flex-shrink-0
                bg-green-500
                h-[20px] w-[40px] sm:h-[28px] sm:w-[54px]
                cursor-pointer rounded-full border-2 border-transparent
                transition-colors duration-200 ease-in-out focus:outline-none
            "
                  data-checked=""
                  data-headlessui-state="checked"
                  id="headlessui-switch-:rf:"
                  role="switch"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Use setting
                  </span>
                  <span
                    aria-hidden="true"
                    class="
                    pointer-events-none inline-block
                    h-[16px] w-[16px] sm:h-[24px] sm:w-[23px]
                    translate-x-5 sm:translate-x-7
                    transform rounded-full bg-white shadow-lg ring-0 transition duration-200 ease-in-out
                "
                  />
                </button>
              </div>
              <h3
                class="text-gray-700 font-semibold text-lg"
              >
                Ingredients:
              </h3>
              <ul
                class="mb-4 flex flex-wrap gap-2"
              >
                <li>
                  <span
                    class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                  >
                    Recipe_1_Ingredient_1 (Recipe_1_Ingredient_1_quantity_1)
                  </span>
                </li>
                <li>
                  <span
                    class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                  >
                    Recipe_1_Ingredient_2 (Recipe_1_Ingredient_2_quantity_2)
                  </span>
                </li>
              </ul>
              <h3
                class="text-gray-700 font-semibold text-lg"
              >
                Dietary Preference:
              </h3>
              <div
                class="mb-5 mt-2 flex flex-wrap gap-2"
              >
                <span
                  class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_1_preference_1
                </span>
                <span
                  class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_1_preference_2
                </span>
              </div>
              <button
                aria-expanded="false"
                class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:rg:"
                type="button"
              >
                <span>
                  Instructions
                </span>
                <svg
                  aria-hidden="true"
                  class="w-5 h-5 transform transition-transform duration-300 "
                  data-slot="icon"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <div
                class="mt-4"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
                  data-headlessui-state=""
                  id="headlessui-disclosure-button-:ri:"
                  type="button"
                >
                  <span>
                    Additional Information
                  </span>
                  <svg
                    aria-hidden="true"
                    class="w-5 h-5 transform transition-transform duration-300 "
                    data-slot="icon"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden relative mt-10 mb-5 overflow-x-hidden"
          >
            <div
              class="px-6 py-4 relative"
            >
              <div
                class="flex justify-between items-stretch w-full"
              >
                <div
                  class="font-bold text-lg sm:text-xl lg:text-2xl mb-4 
            truncate max-w-[65%] sm:max-w-[75%] lg:max-w-[85%]
            cursor-pointer
        "
                  title=""
                >
                  Recipe_2_name
                </div>
                <button
                  aria-checked="false"
                  class="
                relative inline-flex flex-shrink-0
                bg-gray-300
                h-[20px] w-[40px] sm:h-[28px] sm:w-[54px]
                cursor-pointer rounded-full border-2 border-transparent
                transition-colors duration-200 ease-in-out focus:outline-none
            "
                  data-headlessui-state=""
                  id="headlessui-switch-:rk:"
                  role="switch"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Use setting
                  </span>
                  <span
                    aria-hidden="true"
                    class="
                    pointer-events-none inline-block
                    h-[16px] w-[16px] sm:h-[24px] sm:w-[23px]
                    translate-x-0
                    transform rounded-full bg-white shadow-lg ring-0 transition duration-200 ease-in-out
                "
                  />
                </button>
              </div>
              <h3
                class="text-gray-700 font-semibold text-lg"
              >
                Ingredients:
              </h3>
              <ul
                class="mb-4 flex flex-wrap gap-2"
              >
                <li>
                  <span
                    class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                  >
                    Recipe_2_Ingredient_1 (Recipe_2_Ingredient_1_quantity_1)
                  </span>
                </li>
                <li>
                  <span
                    class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded"
                  >
                    Recipe_2_Ingredient_2 (Recipe_2_Ingredient_2_quantity_2)
                  </span>
                </li>
              </ul>
              <h3
                class="text-gray-700 font-semibold text-lg"
              >
                Dietary Preference:
              </h3>
              <div
                class="mb-5 mt-2 flex flex-wrap gap-2"
              >
                <span
                  class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_2_preference_1
                </span>
                <span
                  class="bg-purple-100 text-purple-800 text-sm font-medium px-2.5 py-0.5 rounded"
                >
                  Recipe_2_preference_2
                </span>
              </div>
              <button
                aria-expanded="false"
                class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:rl:"
                type="button"
              >
                <span>
                  Instructions
                </span>
                <svg
                  aria-hidden="true"
                  class="w-5 h-5 transform transition-transform duration-300 "
                  data-slot="icon"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <div
                class="mt-4"
                data-headlessui-state=""
              >
                <button
                  aria-expanded="false"
                  class="flex justify-between w-full px-4 py-2 text-lg font-semibold text-left text-indigo-900 bg-indigo-100 rounded-lg hover:bg-indigo-200 focus:outline-none"
                  data-headlessui-state=""
                  id="headlessui-disclosure-button-:rn:"
                  type="button"
                >
                  <span>
                    Additional Information
                  </span>
                  <svg
                    aria-hidden="true"
                    class="w-5 h-5 transform transition-transform duration-300 "
                    data-slot="icon"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
